[package]
name = "rift"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
futures = "0.3"
idna = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["fs", "macros", "net", "rt-multi-thread", "time"] }
tokio-rustls = "0.24"
x509-parser = "0.16"
